--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -6,10 +6,12 @@
   
   .featuredImageWrapper {
     position: relative;
-    width: 1336px;
-    height: 591px;
+    /* width: 1336px;
+    height: 591px; */
     aspect-ratio: 70/45;
     margin: 2rem auto;
+    display: flex;
+    flex-wrap: wrap;
   }
   /* .featuredImageWrapper1{
     position: relative;
