--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -62,3 +62,16 @@
   .bold-link{
          font-weight: bold;
   }
+/* Home.css */
+
+/* Home.css */
+
+.car3 {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  /* Add the following to remove any potential padding or margin */
+  padding: 0;
+  margin: 0;
+}
+
